tests/ui/fmt/issue-86085.rs
// Tests for an ICE with the fuzzed input below.

fn main ( ) {
format ! ( concat ! ( r#"lJğ¿Ã†ï¿½.ğ¿ï¿½"# , "r} {}" )     ) ;
//~^ ERROR: invalid format string: unmatched `}` found
}
